components/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BREAK
    DOUBLE

Grammar

Rule 0     S' -> main
Rule 1     main -> type MAIN param scope
Rule 2     scope -> OPEN_BRAKETS new_scope statements CLOSE_BRAKETS
Rule 3     new_scope -> <empty>
Rule 4     statements -> statement statements
Rule 5     statements -> statement
Rule 6     statement -> expression SEMI_COLON
Rule 7     statement -> assignment SEMI_COLON
Rule 8     statement -> declaration SEMI_COLON
Rule 9     statement -> array_declaration SEMI_COLON
Rule 10    statement -> if_statement
Rule 11    statement -> for_statement
Rule 12    statement -> do_while_statement
Rule 13    statement -> while_statement
Rule 14    statement -> call_function
Rule 15    statement -> return_statement
Rule 16    assignment -> term ASSING expression
Rule 17    assignment -> term ASSING term
Rule 18    assignment -> term ASSING factor
Rule 19    assignment -> term ASSING factor_char
Rule 20    assignment -> term array_index ASSING factor
Rule 21    assignment -> term array_index ASSING term
Rule 22    assignment -> term array_index ASSING factor_char
Rule 23    factor_char -> CHARACTER
Rule 24    expression -> expression SUM expression
Rule 25    expression -> expression SUB expression
Rule 26    expression -> expression MUL expression
Rule 27    expression -> expression DIV expression
Rule 28    expression -> expression DECREMENT
Rule 29    expression -> expression INCREMENT
Rule 30    expression -> term
Rule 31    expression -> factor
Rule 32    term -> IDENTIFIER
Rule 33    for_statement -> FOR OPEN_PAREN for_initilizer SEMI_COLON condition SEMI_COLON expression CLOSE_PAREN scope
Rule 34    for_initilizer -> assignment
Rule 35    for_initilizer -> declaration
Rule 36    if_statement -> IF OPEN_PAREN condition CLOSE_PAREN scope
Rule 37    if_statement -> IF OPEN_PAREN condition CLOSE_PAREN scope ELSE scope
Rule 38    factor -> NUMBER
Rule 39    type -> INT
Rule 40    type -> FLOAT
Rule 41    type -> CHAR
Rule 42    condition -> expression OR expression
Rule 43    condition -> expression NOT expression
Rule 44    condition -> expression EQUALS expression
Rule 45    condition -> expression GREATER expression
Rule 46    condition -> expression LESSER expression
Rule 47    condition -> expression GREATER_OR_EQUALS expression
Rule 48    condition -> expression LESSER_OR_EQUALS expression
Rule 49    declaration -> type term
Rule 50    declaration -> type assignment
Rule 51    declarations -> declaration COMMA declarations
Rule 52    declarations -> declaration
Rule 53    passing_param -> term COMMA passing_param
Rule 54    passing_param -> term
Rule 55    passing_param -> factor COMMA passing_param
Rule 56    passing_param -> factor
Rule 57    param -> OPEN_PAREN declarations CLOSE_PAREN
Rule 58    param -> OPEN_PAREN CLOSE_PAREN
Rule 59    do_while_statement -> DO scope WHILE OPEN_PAREN condition CLOSE_PAREN SEMI_COLON
Rule 60    while_statement -> WHILE OPEN_PAREN condition CLOSE_PAREN scope
Rule 61    print_statement -> PRINT OPEN_PAREN STRING_LITERAL CLOSE_PAREN SEMI_COLON
Rule 62    print_statement -> PRINT OPEN_PAREN STRING_LITERAL COMMA passing_param CLOSE_PAREN SEMI_COLON
Rule 63    call_function -> IDENTIFIER OPEN_PAREN passing_param CLOSE_PAREN SEMI_COLON
Rule 64    call_function -> IDENTIFIER OPEN_PAREN CLOSE_PAREN SEMI_COLON
Rule 65    call_function -> print_statement
Rule 66    array_index -> OPEN_INTER factor CLOSE_INTER
Rule 67    assignment_array -> ASSING OPEN_INTER sequence CLOSE_INTER
Rule 68    array_declaration -> type term OPEN_INTER NUMBER CLOSE_INTER
Rule 69    array_declaration -> type term OPEN_INTER NUMBER CLOSE_INTER assignment_array
Rule 70    sequence -> NUMBER COMMA sequence
Rule 71    sequence -> NUMBER
Rule 72    sequence -> CHARACTER COMMA sequence
Rule 73    sequence -> CHARACTER
Rule 74    return_statement -> RETURN expression SEMI_COLON
Rule 75    return_statement -> RETURN SEMI_COLON

Terminals, with rules where they appear

AND                  : 
ASSING               : 16 17 18 19 20 21 22 67
BREAK                : 
CHAR                 : 41
CHARACTER            : 23 72 73
CLOSE_BRAKETS        : 2
CLOSE_INTER          : 66 67 68 69
CLOSE_PAREN          : 33 36 37 57 58 59 60 61 62 63 64
COMMA                : 51 53 55 62 70 72
DECREMENT            : 28
DIV                  : 27
DO                   : 59
DOUBLE               : 
ELSE                 : 37
EQUALS               : 44
FLOAT                : 40
FOR                  : 33
GREATER              : 45
GREATER_OR_EQUALS    : 47
IDENTIFIER           : 32 63 64
IF                   : 36 37
INCREMENT            : 29
INT                  : 39
LESSER               : 46
LESSER_OR_EQUALS     : 48
MAIN                 : 1
MUL                  : 26
NOT                  : 43
NUMBER               : 38 68 69 70 71
OPEN_BRAKETS         : 2
OPEN_INTER           : 66 67 68 69
OPEN_PAREN           : 33 36 37 57 58 59 60 61 62 63 64
OR                   : 42
PRINT                : 61 62
RETURN               : 74 75
SEMI_COLON           : 6 7 8 9 33 33 59 61 62 63 64 74 75
STRING_LITERAL       : 61 62
SUB                  : 25
SUM                  : 24
WHILE                : 59 60
error                : 

Nonterminals, with rules where they appear

array_declaration    : 9
array_index          : 20 21 22
assignment           : 7 34 50
assignment_array     : 69
call_function        : 14
condition            : 33 36 37 59 60
declaration          : 8 35 51 52
declarations         : 51 57
do_while_statement   : 12
expression           : 6 16 24 24 25 25 26 26 27 27 28 29 33 42 42 43 43 44 44 45 45 46 46 47 47 48 48 74
factor               : 18 20 31 55 56 66
factor_char          : 19 22
for_initilizer       : 33
for_statement        : 11
if_statement         : 10
main                 : 0
new_scope            : 2
param                : 1
passing_param        : 53 55 62 63
print_statement      : 65
return_statement     : 15
scope                : 1 33 36 37 37 59 60
sequence             : 67 70 72
statement            : 4 5
statements           : 2 4
term                 : 16 17 17 18 19 20 21 21 22 30 49 53 54 68 69
type                 : 1 49 50 68 69
while_statement      : 13

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . type MAIN param scope
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . CHAR

    INT             shift and go to state 3
    FLOAT           shift and go to state 4
    CHAR            shift and go to state 5

    main                           shift and go to state 1
    type                           shift and go to state 2

state 1

    (0) S' -> main .



state 2

    (1) main -> type . MAIN param scope

    MAIN            shift and go to state 6


state 3

    (39) type -> INT .

    MAIN            reduce using rule 39 (type -> INT .)
    IDENTIFIER      reduce using rule 39 (type -> INT .)


state 4

    (40) type -> FLOAT .

    MAIN            reduce using rule 40 (type -> FLOAT .)
    IDENTIFIER      reduce using rule 40 (type -> FLOAT .)


state 5

    (41) type -> CHAR .

    MAIN            reduce using rule 41 (type -> CHAR .)
    IDENTIFIER      reduce using rule 41 (type -> CHAR .)


state 6

    (1) main -> type MAIN . param scope
    (57) param -> . OPEN_PAREN declarations CLOSE_PAREN
    (58) param -> . OPEN_PAREN CLOSE_PAREN

    OPEN_PAREN      shift and go to state 8

    param                          shift and go to state 7

state 7

    (1) main -> type MAIN param . scope
    (2) scope -> . OPEN_BRAKETS new_scope statements CLOSE_BRAKETS

    OPEN_BRAKETS    shift and go to state 10

    scope                          shift and go to state 9

state 8

    (57) param -> OPEN_PAREN . declarations CLOSE_PAREN
    (58) param -> OPEN_PAREN . CLOSE_PAREN
    (51) declarations -> . declaration COMMA declarations
    (52) declarations -> . declaration
    (49) declaration -> . type term
    (50) declaration -> . type assignment
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . CHAR

    CLOSE_PAREN     shift and go to state 12
    INT             shift and go to state 3
    FLOAT           shift and go to state 4
    CHAR            shift and go to state 5

    declarations                   shift and go to state 11
    declaration                    shift and go to state 13
    type                           shift and go to state 14

state 9

    (1) main -> type MAIN param scope .

    $end            reduce using rule 1 (main -> type MAIN param scope .)


state 10

    (2) scope -> OPEN_BRAKETS . new_scope statements CLOSE_BRAKETS
    (3) new_scope -> .

    IF              reduce using rule 3 (new_scope -> .)
    FOR             reduce using rule 3 (new_scope -> .)
    DO              reduce using rule 3 (new_scope -> .)
    WHILE           reduce using rule 3 (new_scope -> .)
    IDENTIFIER      reduce using rule 3 (new_scope -> .)
    RETURN          reduce using rule 3 (new_scope -> .)
    NUMBER          reduce using rule 3 (new_scope -> .)
    INT             reduce using rule 3 (new_scope -> .)
    FLOAT           reduce using rule 3 (new_scope -> .)
    CHAR            reduce using rule 3 (new_scope -> .)
    PRINT           reduce using rule 3 (new_scope -> .)

    new_scope                      shift and go to state 15

state 11

    (57) param -> OPEN_PAREN declarations . CLOSE_PAREN

    CLOSE_PAREN     shift and go to state 16


state 12

    (58) param -> OPEN_PAREN CLOSE_PAREN .

    OPEN_BRAKETS    reduce using rule 58 (param -> OPEN_PAREN CLOSE_PAREN .)


state 13

    (51) declarations -> declaration . COMMA declarations
    (52) declarations -> declaration .

    COMMA           shift and go to state 17
    CLOSE_PAREN     reduce using rule 52 (declarations -> declaration .)


state 14

    (49) declaration -> type . term
    (50) declaration -> type . assignment
    (32) term -> . IDENTIFIER
    (16) assignment -> . term ASSING expression
    (17) assignment -> . term ASSING term
    (18) assignment -> . term ASSING factor
    (19) assignment -> . term ASSING factor_char
    (20) assignment -> . term array_index ASSING factor
    (21) assignment -> . term array_index ASSING term
    (22) assignment -> . term array_index ASSING factor_char

    IDENTIFIER      shift and go to state 20

    term                           shift and go to state 18
    assignment                     shift and go to state 19

state 15

    (2) scope -> OPEN_BRAKETS new_scope . statements CLOSE_BRAKETS
    (4) statements -> . statement statements
    (5) statements -> . statement
    (6) statement -> . expression SEMI_COLON
    (7) statement -> . assignment SEMI_COLON
    (8) statement -> . declaration SEMI_COLON
    (9) statement -> . array_declaration SEMI_COLON
    (10) statement -> . if_statement
    (11) statement -> . for_statement
    (12) statement -> . do_while_statement
    (13) statement -> . while_statement
    (14) statement -> . call_function
    (15) statement -> . return_statement
    (24) expression -> . expression SUM expression
    (25) expression -> . expression SUB expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIV expression
    (28) expression -> . expression DECREMENT
    (29) expression -> . expression INCREMENT
    (30) expression -> . term
    (31) expression -> . factor
    (16) assignment -> . term ASSING expression
    (17) assignment -> . term ASSING term
    (18) assignment -> . term ASSING factor
    (19) assignment -> . term ASSING factor_char
    (20) assignment -> . term array_index ASSING factor
    (21) assignment -> . term array_index ASSING term
    (22) assignment -> . term array_index ASSING factor_char
    (49) declaration -> . type term
    (50) declaration -> . type assignment
    (68) array_declaration -> . type term OPEN_INTER NUMBER CLOSE_INTER
    (69) array_declaration -> . type term OPEN_INTER NUMBER CLOSE_INTER assignment_array
    (36) if_statement -> . IF OPEN_PAREN condition CLOSE_PAREN scope
    (37) if_statement -> . IF OPEN_PAREN condition CLOSE_PAREN scope ELSE scope
    (33) for_statement -> . FOR OPEN_PAREN for_initilizer SEMI_COLON condition SEMI_COLON expression CLOSE_PAREN scope
    (59) do_while_statement -> . DO scope WHILE OPEN_PAREN condition CLOSE_PAREN SEMI_COLON
    (60) while_statement -> . WHILE OPEN_PAREN condition CLOSE_PAREN scope
    (63) call_function -> . IDENTIFIER OPEN_PAREN passing_param CLOSE_PAREN SEMI_COLON
    (64) call_function -> . IDENTIFIER OPEN_PAREN CLOSE_PAREN SEMI_COLON
    (65) call_function -> . print_statement
    (74) return_statement -> . RETURN expression SEMI_COLON
    (75) return_statement -> . RETURN SEMI_COLON
    (32) term -> . IDENTIFIER
    (38) factor -> . NUMBER
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . CHAR
    (61) print_statement -> . PRINT OPEN_PAREN STRING_LITERAL CLOSE_PAREN SEMI_COLON
    (62) print_statement -> . PRINT OPEN_PAREN STRING_LITERAL COMMA passing_param CLOSE_PAREN SEMI_COLON

    IF              shift and go to state 37
    FOR             shift and go to state 38
    DO              shift and go to state 39
    WHILE           shift and go to state 40
    IDENTIFIER      shift and go to state 41
    RETURN          shift and go to state 43
    NUMBER          shift and go to state 36
    INT             shift and go to state 3
    FLOAT           shift and go to state 4
    CHAR            shift and go to state 5
    PRINT           shift and go to state 44

    statements                     shift and go to state 21
    statement                      shift and go to state 22
    expression                     shift and go to state 23
    assignment                     shift and go to state 24
    declaration                    shift and go to state 25
    array_declaration              shift and go to state 26
    if_statement                   shift and go to state 27
    for_statement                  shift and go to state 28
    do_while_statement             shift and go to state 29
    while_statement                shift and go to state 30
    call_function                  shift and go to state 31
    return_statement               shift and go to state 32
    term                           shift and go to state 33
    factor                         shift and go to state 34
    type                           shift and go to state 35
    print_statement                shift and go to state 42

state 16

    (57) param -> OPEN_PAREN declarations CLOSE_PAREN .

    OPEN_BRAKETS    reduce using rule 57 (param -> OPEN_PAREN declarations CLOSE_PAREN .)


state 17

    (51) declarations -> declaration COMMA . declarations
    (51) declarations -> . declaration COMMA declarations
    (52) declarations -> . declaration
    (49) declaration -> . type term
    (50) declaration -> . type assignment
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . CHAR

    INT             shift and go to state 3
    FLOAT           shift and go to state 4
    CHAR            shift and go to state 5

    declaration                    shift and go to state 13
    declarations                   shift and go to state 45
    type                           shift and go to state 14

state 18

    (49) declaration -> type term .
    (16) assignment -> term . ASSING expression
    (17) assignment -> term . ASSING term
    (18) assignment -> term . ASSING factor
    (19) assignment -> term . ASSING factor_char
    (20) assignment -> term . array_index ASSING factor
    (21) assignment -> term . array_index ASSING term
    (22) assignment -> term . array_index ASSING factor_char
    (66) array_index -> . OPEN_INTER factor CLOSE_INTER

    COMMA           reduce using rule 49 (declaration -> type term .)
    CLOSE_PAREN     reduce using rule 49 (declaration -> type term .)
    SEMI_COLON      reduce using rule 49 (declaration -> type term .)
    ASSING          shift and go to state 46
    OPEN_INTER      shift and go to state 48

    array_index                    shift and go to state 47

state 19

    (50) declaration -> type assignment .

    COMMA           reduce using rule 50 (declaration -> type assignment .)
    CLOSE_PAREN     reduce using rule 50 (declaration -> type assignment .)
    SEMI_COLON      reduce using rule 50 (declaration -> type assignment .)


state 20

    (32) term -> IDENTIFIER .

    ASSING          reduce using rule 32 (term -> IDENTIFIER .)
    OPEN_INTER      reduce using rule 32 (term -> IDENTIFIER .)
    COMMA           reduce using rule 32 (term -> IDENTIFIER .)
    CLOSE_PAREN     reduce using rule 32 (term -> IDENTIFIER .)
    SEMI_COLON      reduce using rule 32 (term -> IDENTIFIER .)
    SUM             reduce using rule 32 (term -> IDENTIFIER .)
    SUB             reduce using rule 32 (term -> IDENTIFIER .)
    MUL             reduce using rule 32 (term -> IDENTIFIER .)
    DIV             reduce using rule 32 (term -> IDENTIFIER .)
    DECREMENT       reduce using rule 32 (term -> IDENTIFIER .)
    INCREMENT       reduce using rule 32 (term -> IDENTIFIER .)
    OR              reduce using rule 32 (term -> IDENTIFIER .)
    NOT             reduce using rule 32 (term -> IDENTIFIER .)
    EQUALS          reduce using rule 32 (term -> IDENTIFIER .)
    GREATER         reduce using rule 32 (term -> IDENTIFIER .)
    LESSER          reduce using rule 32 (term -> IDENTIFIER .)
    GREATER_OR_EQUALS reduce using rule 32 (term -> IDENTIFIER .)
    LESSER_OR_EQUALS reduce using rule 32 (term -> IDENTIFIER .)


state 21

    (2) scope -> OPEN_BRAKETS new_scope statements . CLOSE_BRAKETS

    CLOSE_BRAKETS   shift and go to state 49


state 22

    (4) statements -> statement . statements
    (5) statements -> statement .
    (4) statements -> . statement statements
    (5) statements -> . statement
    (6) statement -> . expression SEMI_COLON
    (7) statement -> . assignment SEMI_COLON
    (8) statement -> . declaration SEMI_COLON
    (9) statement -> . array_declaration SEMI_COLON
    (10) statement -> . if_statement
    (11) statement -> . for_statement
    (12) statement -> . do_while_statement
    (13) statement -> . while_statement
    (14) statement -> . call_function
    (15) statement -> . return_statement
    (24) expression -> . expression SUM expression
    (25) expression -> . expression SUB expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIV expression
    (28) expression -> . expression DECREMENT
    (29) expression -> . expression INCREMENT
    (30) expression -> . term
    (31) expression -> . factor
    (16) assignment -> . term ASSING expression
    (17) assignment -> . term ASSING term
    (18) assignment -> . term ASSING factor
    (19) assignment -> . term ASSING factor_char
    (20) assignment -> . term array_index ASSING factor
    (21) assignment -> . term array_index ASSING term
    (22) assignment -> . term array_index ASSING factor_char
    (49) declaration -> . type term
    (50) declaration -> . type assignment
    (68) array_declaration -> . type term OPEN_INTER NUMBER CLOSE_INTER
    (69) array_declaration -> . type term OPEN_INTER NUMBER CLOSE_INTER assignment_array
    (36) if_statement -> . IF OPEN_PAREN condition CLOSE_PAREN scope
    (37) if_statement -> . IF OPEN_PAREN condition CLOSE_PAREN scope ELSE scope
    (33) for_statement -> . FOR OPEN_PAREN for_initilizer SEMI_COLON condition SEMI_COLON expression CLOSE_PAREN scope
    (59) do_while_statement -> . DO scope WHILE OPEN_PAREN condition CLOSE_PAREN SEMI_COLON
    (60) while_statement -> . WHILE OPEN_PAREN condition CLOSE_PAREN scope
    (63) call_function -> . IDENTIFIER OPEN_PAREN passing_param CLOSE_PAREN SEMI_COLON
    (64) call_function -> . IDENTIFIER OPEN_PAREN CLOSE_PAREN SEMI_COLON
    (65) call_function -> . print_statement
    (74) return_statement -> . RETURN expression SEMI_COLON
    (75) return_statement -> . RETURN SEMI_COLON
    (32) term -> . IDENTIFIER
    (38) factor -> . NUMBER
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . CHAR
    (61) print_statement -> . PRINT OPEN_PAREN STRING_LITERAL CLOSE_PAREN SEMI_COLON
    (62) print_statement -> . PRINT OPEN_PAREN STRING_LITERAL COMMA passing_param CLOSE_PAREN SEMI_COLON

    CLOSE_BRAKETS   reduce using rule 5 (statements -> statement .)
    IF              shift and go to state 37
    FOR             shift and go to state 38
    DO              shift and go to state 39
    WHILE           shift and go to state 40
    IDENTIFIER      shift and go to state 41
    RETURN          shift and go to state 43
    NUMBER          shift and go to state 36
    INT             shift and go to state 3
    FLOAT           shift and go to state 4
    CHAR            shift and go to state 5
    PRINT           shift and go to state 44

    statement                      shift and go to state 22
    statements                     shift and go to state 50
    expression                     shift and go to state 23
    assignment                     shift and go to state 24
    declaration                    shift and go to state 25
    array_declaration              shift and go to state 26
    if_statement                   shift and go to state 27
    for_statement                  shift and go to state 28
    do_while_statement             shift and go to state 29
    while_statement                shift and go to state 30
    call_function                  shift and go to state 31
    return_statement               shift and go to state 32
    term                           shift and go to state 33
    factor                         shift and go to state 34
    type                           shift and go to state 35
    print_statement                shift and go to state 42

state 23
